--- a/.env
+++ b/.env
@@ -1,16 +1,17 @@
 # Selfbot options
-TOKEN = "ODk4NDA4MTkwMTM4NTM1OTU2.GuXZQI.-T-0QhRkulPA5WgOaFyBjn5LJNyP0WJZd63ACI" # Your Discord self-bot token
+# TOKEN = "ODk4NDA4MTkwMTM4NTM1OTU2.GuXZQI.-T-0QhRkulPA5WgOaFyBjn5LJNyP0WJZd63ACI" # Your Discord self-bot token
+TOKEN = "MTI3MDU4NTUwMTk1NDYwOTI3Mw.GZoprj.11uRPHvx8uAsMiFxmp-XqxV84D7feEInLaoQMM"
 PREFIX = "%" # The prefix used to trigger your self-bot commands
 # GUILD_ID = "733900363282776075" # The ID of the Discord server your self-bot will be running on
-GUILD_ID = "1014349363276943450" # PROGRAMADORES
-# GUILD_ID = "971979971339890708" # PATITAS
+# GUILD_ID = "1014349363276943450" # PROGRAMADORES
+GUILD_ID = "971979971339890708" # PATITAS
 # COMMAND_CHANNEL_ID = "733900365661208596" # The ID of the Discord channel where your self-bot will respond to commands
-COMMAND_CHANNEL_ID = "1270390138605666356" # PROGRAMADORES
-# COMMAND_CHANNEL_ID = "1254998855397675091" # PATITAS
+# COMMAND_CHANNEL_ID = "1270390138605666356" # PROGRAMADORES
+COMMAND_CHANNEL_ID = "1254998855397675091" # PATITAS
 # VIDEO_CHANNEL_ID = "733900365661208596" # The ID of the Discord voice/video channel where your self-bot will stream videos
-VIDEO_CHANNEL_ID = "1270390138605666356" # PROGRAMADORES
-# VIDEO_CHANNEL_ID = "1254998855397675091" # PATITAS
-ADMIN_IDS = ["661899688454389770", "752941101056393357"] # A list of Discord user IDs that are considered administrators for your self-bot (not implemented yet)
+# VIDEO_CHANNEL_ID = "1270390138605666356" # PROGRAMADORES
+VIDEO_CHANNEL_ID = "1254998855397675091" # PATITAS
+ADMIN_IDS = ["661899688454389770", "752941101056393357", "753818442548772986"] # A list of Discord user IDs that are considered administrators for your self-bot (not implemented yet)
 VIDEOS_FOLDER = "./videos" # The local path where you store video files
 PREVIEW_CACHE = "/tmp/preview-cache" # The local path where your self-bot will cache video preview thumbnails
 
