--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Selfbot options
-# TOKEN = "ODk4NDA4MTkwMTM4NTM1OTU2.GuXZQI.-T-0QhRkulPA5WgOaFyBjn5LJNyP0WJZd63ACI" # Your Discord self-bot token
-TOKEN = "MTI3MDU4NTUwMTk1NDYwOTI3Mw.GZoprj.11uRPHvx8uAsMiFxmp-XqxV84D7feEInLaoQMM"
+TOKEN = "ODk4NDA4MTkwMTM4NTM1OTU2.GuXZQI.-T-0QhRkulPA5WgOaFyBjn5LJNyP0WJZd63ACI" # Your Discord self-bot token
+# TOKEN = "MTI3MDU4NTUwMTk1NDYwOTI3Mw.GZoprj.11uRPHvx8uAsMiFxmp-XqxV84D7feEInLaoQMM"
 PREFIX = "%" # The prefix used to trigger your self-bot commands
 # GUILD_ID = "733900363282776075" # The ID of the Discord server your self-bot will be running on
 # GUILD_ID = "1014349363276943450" # PROGRAMADORES
