--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "play-dl": "^1.9.7",
     "puppeteer": "^22.15.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "random-useragent": "^0.5.0",
     "tslib": "^2.6.3"
   },
