--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.3",
+    "http-proxy-agent": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "play-dl": "^1.9.7",
     "puppeteer": "^22.15.0",
