--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "random-useragent": "^0.5.0",
-    "tslib": "^2.6.3"
+    "tslib": "^2.6.3",
+    "user-agents": "^1.1.292"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
