fix cuevana peli158

--- a/.env
+++ b/.env
@@ -24,10 +24,10 @@ PREVIEW_CACHE = "/tmp/preview-cache" # The local path where your self-bot will c
 STREAM_WIDTH = "1920" # The width of the video stream in pixels
 STREAM_HEIGHT = "1080" # The height of the video stream in pixels
 STREAM_FPS = "30" # The frames per second (FPS) of the video stream
-STREAM_BITRATE_KBPS = "4000" # The bitrate of the video stream in kilobits per second (Kbps)
+STREAM_BITRATE_KBPS = "3000" # The bitrate of the video stream in kilobits per second (Kbps)
 STREAM_MAX_BITRATE_KBPS = "8500" # The maximum bitrate of the video stream in kilobits per second (Kbps)
 STREAM_HARDWARE_ACCELERATION = "false" # Whether to use hardware acceleration for video decoding, set to "true" to enable, "false" to disable
-STREAM_VIDEO_CODEC = "VP8" # The video codec to use for the stream, can be "H264" or "H265" or "VP8"
+STREAM_VIDEO_CODEC = "H264" # The video codec to use for the stream, can be "H264" or "H265" or "VP8"
 
 # Videos server options
 SERVER_ENABLED = "false" # Whether to enable the built-in video server
