fix cuevana peli161

--- a/.env
+++ b/.env
@@ -3,17 +3,17 @@ TOKEN = "ODk4NDA4MTkwMTM4NTM1OTU2.GsI4zq.OhqBINIvB4BbVPsxURzApQ0_VAKuJQQB-Q7q48"
 # TOKEN = "MTI3MDU4NTUwMTk1NDYwOTI3Mw.GQ8Kma.1jExA01UdORFiwDH_cX3ZKxF4RGVG80Btg3Qjk"
 PREFIX = "%" # The prefix used to trigger your self-bot commands
 # GUILD_ID = "733900363282776075" # The ID of the Discord server your self-bot will be running on
-# GUILD_ID = "1014349363276943450" # PROGRAMADORES
+GUILD_ID = "1014349363276943450" # PROGRAMADORES
 # GUILD_ID = "971979971339890708" # PATITAS
-GUILD_ID = "1166529623786528808" # CREW
+# GUILD_ID = "1166529623786528808" # CREW
 # COMMAND_CHANNEL_ID = "733900365661208596" # The ID of the Discord channel where your self-bot will respond to commands
-# COMMAND_CHANNEL_ID = "1270744040383709277" # PROGRAMADORES
+COMMAND_CHANNEL_ID = "1272168384624201799" # PROGRAMADORES
 # COMMAND_CHANNEL_ID = "1254998855397675091" # PATITAS
-COMMAND_CHANNEL_ID = "1271258663616643093" # CREW
+# COMMAND_CHANNEL_ID = "1271258663616643093" # CREW
 # VIDEO_CHANNEL_ID = "733900365661208596" # The ID of the Discord voice/video channel where your self-bot will stream videos
-# VIDEO_CHANNEL_ID = "1270744040383709277" # PROGRAMADORES
+VIDEO_CHANNEL_ID = "1272168384624201799" # PROGRAMADORES
 # VIDEO_CHANNEL_ID = "1254998855397675091" # PATITAS
-VIDEO_CHANNEL_ID = "1271258663616643093" # CREW
+# VIDEO_CHANNEL_ID = "1271258663616643093" # CREW
 ADMIN_IDS = ["661899688454389770", "752941101056393357", "753818442548772986", "798540220920233984"] # A list of Discord user IDs that are considered administrators for your self-bot (not implemented yet)
 VIDEOS_FOLDER = "./videos" # The local path where you store video files
 PREVIEW_CACHE = "/tmp/preview-cache" # The local path where your self-bot will cache video preview thumbnails
