--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@dank074/discord-video-stream": "^3.2.0",
     "@distube/ytdl-core": "^4.14.3",
+    "@types/mongoose": "^5.11.97",
     "axios": "^1.7.3",
     "cheerio": "^1.0.0-rc.12",
     "discord.js-selfbot-v13": "^3.2.2",
@@ -21,6 +22,7 @@
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.3",
     "http-proxy-agent": "^7.0.2",
+    "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "play-dl": "^1.9.7",
     "puppeteer": "^22.15.0",
