--- a/.env
+++ b/.env
@@ -1,22 +1,22 @@
 # Selfbot options
-# TOKEN = "ODk4NDA4MTkwMTM4NTM1OTU2.GsI4zq.OhqBINIvB4BbVPsxURzApQ0_VAKuJQQB-Q7q48" # Your Discord self-bot token
+TOKEN = "ODk4NDA4MTkwMTM4NTM1OTU2.GsI4zq.OhqBINIvB4BbVPsxURzApQ0_VAKuJQQB-Q7q48" # Your Discord self-bot token
 # TOKEN = "MTI3MzQxMzgzOTU4ODgyMzE5MQ.GCJUPA.SK2bE0IaAinjfVr_rw-aQbwFLu6uLtJfD93OEo" # Server de Gaby
-TOKEN = "MTI3MDU4NTUwMTk1NDYwOTI3Mw.GQ8Kma.1jExA01UdORFiwDH_cX3ZKxF4RGVG80Btg3Qjk"
+# TOKEN = "MTI3MDU4NTUwMTk1NDYwOTI3Mw.GQ8Kma.1jExA01UdORFiwDH_cX3ZKxF4RGVG80Btg3Qjk" # PATITAS
 PREFIX = "%" # The prefix used to trigger your self-bot commands
 # GUILD_ID = "733900363282776075" # The ID of the Discord server your self-bot will be running on
 # GUILD_ID = "1014349363276943450" # PROGRAMADORES
-GUILD_ID = "971979971339890708" # PATITAS
-# GUILD_ID = "1166529623786528808" # CREW
+# GUILD_ID = "971979971339890708" # PATITAS
+GUILD_ID = "1166529623786528808" # CREW
 # GUILD_ID = "1273415976557346867" # Server de Gaby
 # COMMAND_CHANNEL_ID = "733900365661208596" # The ID of the Discord channel where your self-bot will respond to commands
 # COMMAND_CHANNEL_ID = "1272168384624201799" # PROGRAMADORES
-COMMAND_CHANNEL_ID = "1254998855397675091" # PATITAS
-# COMMAND_CHANNEL_ID = "1273139992142807103" # CREW
+# COMMAND_CHANNEL_ID = "1254998855397675091" # PATITAS
+COMMAND_CHANNEL_ID = "1273139992142807103" # CREW
 # COMMAND_CHANNEL_ID = "1273415976989233335" # Server de Gaby
 # VIDEO_CHANNEL_ID = "733900365661208596" # The ID of the Discord voice/video channel where your self-bot will stream videos
 # VIDEO_CHANNEL_ID = "1272168384624201799" # PROGRAMADORES
-VIDEO_CHANNEL_ID = "1254998855397675091" # PATITAS
-# VIDEO_CHANNEL_ID = "1273139992142807103" # CREW
+# VIDEO_CHANNEL_ID = "1254998855397675091" # PATITAS
+VIDEO_CHANNEL_ID = "1273139992142807103" # CREW
 # VIDEO_CHANNEL_ID = "1273415976989233335" # Server De Gaby
 ADMIN_IDS = ["661899688454389770", "752941101056393357", "753818442548772986", "798540220920233984"] # A list of Discord user IDs that are considered administrators for your self-bot (not implemented yet)
 VIDEOS_FOLDER = "./videos" # The local path where you store video files
