--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.3",
     "http-proxy-agent": "^7.0.2",
+    "m3u8-parser": "^7.2.0",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "play-dl": "^1.9.7",
